<resources>
    <string name="app_name">Shortly</string>
    <string name="imageViewDefaultIllustration">ImageView default illustration</string>
    <string name="imageViewShapeForm">ImageView shape Form</string>
    <string name="let_get_started">Let\'s get started!</string>
    <string name="paste_your_first_link">Paste your first link into\nthe field to shorten it</string>
    <string name="shorten_it">shorten it!</string>
    <string name="shorten_a_link_here">Shorten a link here…</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied!</string>
    <string name="your_ink_history">Your Link History</string>
    <string name="delete_a_link">Delete a link</string>
    <string name="invalid_url">This is not a valid URL. Please enter a valid url and try again.</string>
    <string name="please_add_a_link_here">Please add a link here</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="error_received_custom">We have received an error. Please check your url and try again.</string>
    <string name="no_internet_error">Internet not available. Please check your connection and try again.</string>
    <string name="copy_to_clip_board">Copied to clipboard.</string>
    <string name="empty" />
    <string name="link_already_exist" >This link already exist. Please try another link or delete the existing one.</string>
</resources>
