<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewDefaultIllustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageViewDefaultIllustration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_default_illustration" />

    <TextView
        android:id="@+id/textViewShortly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/app_name"
        android:textColor="@color/bluish_purple"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewDefaultIllustration"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDefaultIllustration"
        app:layout_constraintStart_toStartOf="@+id/imageViewDefaultIllustration" />

    <TextView
        android:id="@+id/textViewGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/let_get_started"
        android:textColor="@color/bluish_purple"
        android:textSize="@dimen/_17sdp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDefaultIllustration"
        app:layout_constraintStart_toStartOf="@+id/imageViewDefaultIllustration"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDefaultIllustration" />

    <TextView
        android:id="@+id/textViewInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/paste_your_first_link"
        android:textColor="@color/bluish_purple"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDefaultIllustration"
        app:layout_constraintStart_toStartOf="@+id/imageViewDefaultIllustration"
        app:layout_constraintTop_toBottomOf="@+id/textViewGetStarted" />
</androidx.constraintlayout.widget.ConstraintLayout>
