<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageViewShapeForm"
        app:layout_constraintBottom_toBottomOf="@+id/buttonShortenIt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_shape" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextLink"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:lines="1"
        android:hint="@string/shorten_a_link_here"
        android:textColorHint="@color/gray_dark"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toTopOf="@+id/buttonShortenIt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonShortenIt"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@drawable/button_shorten_states"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/shorten_it"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextLink"
        app:layout_constraintStart_toStartOf="@+id/editTextLink"
        app:layout_constraintTop_toBottomOf="@+id/editTextLink" />

    <ProgressBar
        android:id="@+id/my_progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        android:indeterminateTint="@color/green"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toTopOf="@+id/editTextLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
